Fix margin for card text, spacing of icons for mobile

--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -258,7 +258,7 @@ img.profile {
 }
 
 .wrap-text {
-  margin: 8px;
+  margin: 0px;
 }
 
 .contact-link {
@@ -371,7 +371,7 @@ img.profile {
 
   .card-flex {
     margin-top: 16px;
-    gap: 0.5rem 1.5rem;
+    gap: 0.5rem 2rem;
   }
 
   .icon-container {
